# zpr

./: .gitignore  README.md  compileCpp.sh  docker-compose.yaml  pom.xml  restart.sh  start.sh
client/: .gitignore  Dockerfile  compileCpp.sh  pom.xml
client/src/main/cpp/: CMakeLists.txt  com_strangersprings_zpr_client_process_service_calc_Calculator.cpp  com_strangersprings_zpr_client_process_service_calc_Calculator.h  com_strangersprings_zpr_client_service_calc_Calculator.cpp  com_strangersprings_zpr_client_service_calc_Calculator.h
client/src/main/cpp/lib/: CalcCoordinator.h  Currency.h  Data.h  DataDTO.h  DataHolder.h  DefaultsHolder.h  EMA.h  IndicesDTO.h  JArrayList.h  JArrayListProps.h  JCurrencyDTO.h  JCurrencyDTOProps.h  JCurrencyIndicesDTO.h  JCurrencyIndicesDTOProps.h  JniUtils.h  ModelController.h  ModelProxy.h  SMA.h  Stat.h  Utils.h
client/src/main/cpp/zpr_lib/: CMakeLists.txt
client/src/main/cpp/zpr_lib/aggregation/: AggregatingBuffer.h  AggregationConfigValidator.cpp  AggregationConfigValidator.h  AggregationController.cpp  AggregationController.h  AggregationCoordinator.cpp  AggregationCoordinator.h  Observer.h  StatUtils.cpp  StatUtils.h  Subject.h
client/src/main/cpp/zpr_lib/config/: Aggregation.cpp  Aggregation.h  AggregationConfig.cpp  AggregationConfig.h  AggregationDTO.cpp  AggregationDTO.h  Config.cpp  Config.h  ConfigException.h  CurrenciesDTO.cpp  CurrenciesDTO.h  CurrencyDTO.cpp  CurrencyDTO.h  Entry.h  Index.cpp  Index.h  IndexConfig.cpp  IndexConfig.h  IndexDTO.cpp  IndexDTO.h  IndexesDTO.cpp  IndexesDTO.h  JsonUtils.h  StatDTO.cpp  StatDTO.h
client/src/main/cpp/zpr_lib/index/: EMA.cpp  EMA.h  IndexController.cpp  IndexController.h  IndexCoordinator.cpp  IndexCoordinator.h  IndexType.h  IndexUtils.cpp  IndexUtils.h  RSI.cpp  RSI.h  RealtimeIndexCalculator.h  RealtimeIndexFactory.cpp  RealtimeIndexFactory.h  SMA.cpp  SMA.h
client/src/main/cpp/zpr_lib/model/: Currency.cpp  Currency.h  DataBuffer.h  DefaultsHolder.cpp  DefaultsHolder.h  Mapper.cpp  Mapper.h  MapperUtils.h  ModelController.cpp  ModelController.h  ModelProxy.cpp  ModelProxy.h  ModelUtils.cpp  ModelUtils.h  RealtimeIndex.cpp  RealtimeIndex.h  Stat.cpp  Stat.h
client/src/main/cpp/zpr_lib/test/: TestUtils.cpp  TestUtils.h  google_test.cpp
client/src/main/resources/: Config.json  application.properties  data.sql
client/src/test/resources/: TestConfig.json
currency-api/: Dockerfile  pom.xml
data-series-server/: Dockerfile  pom.xml
scripts/: schema.sql
src/main/cpp/: com_strangersprings_zpr_client_service_calc_Calculator.cpp  com_strangersprings_zpr_client_service_calc_Calculator.h
src/main/resources/: application.properties
ui/: Dockerfile  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.js  App.test.js  cryptocurrencydata.js  index.js
ui/src/component/: App.js  ChartSelector.js  Cryptocurrency.js  CurrencyOptions.js  EthernumChart.js  Header.js  Image.js  IndicesChart.js  IndicesPage.js  InlinedSvgs.js  LitecoinChart.js  NavigationBar.js  RealtimeChart.js  RouterCharts.js  TimestampPicker.js  WelcomePage.js  ZCashChart.js
ui/src/component/charts/: Chart.js  (+7 more)
ui/src/css/: style.css
(+173 files in other folders)
