project(currencies)
set(HEADER_FILES
        aggregation/AggregatingBuffer.h
        aggregation/AggregationConfigValidator.h
        aggregation/AggregationController.h
        aggregation/AggregationCoordinator.h
        aggregation/Observer.h
        aggregation/StatUtils.h
        aggregation/Subject.h
        config/Aggregation.h
        config/AggregationConfig.h
        config/AggregationDTO.h
        config/Config.h
        config/ConfigException.h
        config/CurrenciesDTO.h
        config/CurrencyDTO.h
        config/Entry.h
        config/Index.h
        config/IndexConfig.h
        config/IndexDTO.h
        config/IndexesDTO.h
        config/JsonUtils.h
        config/StatDTO.h
        index/EMA.h
        index/IndexController.h
        index/IndexCoordinator.h
        index/IndexType.h
        index/IndexUtils.h
        index/RealtimeIndexCalculator.h
        index/RealtimeIndexFactory.h
        index/RSI.h
        index/SMA.h
        model/Currency.h
        model/Data.h
        model/DataBuffer.h
        model/DefaultsHolder.h
        model/Mapper.h
        model/MapperUtils.h
        model/ModelController.h
        model/ModelProxy.h
        model/ModelUtils.h
        model/RealtimeIndex.h
        model/Stat.h
        test/TestUtils.h
        )

set(SOURCE_FILES
        aggregation/AggregationConfigValidator.cpp
        aggregation/AggregationController.cpp
        aggregation/AggregationCoordinator.cpp
        aggregation/StatUtils.cpp
        config/Aggregation.cpp
        config/AggregationConfig.cpp
        config/AggregationDTO.cpp
        config/Config.cpp
        config/CurrenciesDTO.cpp
        config/CurrencyDTO.cpp
        config/Index.cpp
        config/IndexConfig.cpp
        config/IndexDTO.cpp
        config/IndexesDTO.cpp
        config/StatDTO.cpp
        index/EMA.cpp
        index/IndexController.cpp
        index/IndexCoordinator.cpp
        index/IndexUtils.cpp
        index/RealtimeIndexFactory.cpp
        index/RSI.cpp
        index/SMA.cpp
        model/Currency.cpp
        model/DefaultsHolder.cpp
        model/Mapper.cpp
        model/ModelController.cpp
        model/ModelProxy.cpp
        model/ModelUtils.cpp
        model/RealtimeIndex.cpp
        model/Stat.cpp
        test/TestUtils.cpp
        )

add_library(zpr_lib STATIC ${SOURCE_FILES} ${HEADER_FILES})